# stickygpm

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindFFTW.cmake  FindNLOPT.cmake
include/stickygpm/: .#extra_distributions.h  .#outer_rlsbp2.h  constants.h  covariance_functors.h  covariance_selection.h  covest_command_parser.h  covest_command_parser.inl  csv_reader.h  defines.h  eigen_read_csv.cpp  eigen_read_csv.h  eigen_slicing.h  eigen_vec.h  estimate_kernel_parameters.h  extra_distributions.h  kernels.h  knots.h  logistic_weight_distribution.h  median.h  nifti_manipulation.h  nngp_regression.h  outer_lsbp.h  outer_rlsbp.h  outer_rlsbp2.h  projected_gp_parameters.h  projected_gp_parameters_naive_sparse.h  projected_gp_regression.h  projected_gp_regression2.h  projected_gp_regression3.h  reorder_container.h  sgpreg_command_parser.h  sgpreg_command_parser.inl  stickygpm_regression_data.h  stickygpm_regression_model.h  truncated_logistic_distribution.h  truncated_normal_distribution.h  utilities.h  vector_summation.h  voxel_neighborhoods.h
include/stickygpm/impl/: eigen_slicing.inl  kernels.inl  nifti_manipulation.inl  utilities.inl
lib/abseil/include/abseil/: assignment_problem.h
lib/nifti/utils/: nifti1_test  nifti_stats  nifti_tool
src/: CMakeLists.txt  covest.cpp  image_knots.cpp  sgpreg.cpp  threshold_nifti.cpp
